--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <div id="controlsInfo"></div>
     <script>
         // --- CONFIGURAZIONI ---
-        const WORLD_WIDTH = 12000; // Mondo più grande
-        const WORLD_HEIGHT = 9000; // Mondo più grande
+        const WORLD_WIDTH = 20000; // Mondo più grande
+        const WORLD_HEIGHT = 20000; // Mondo più grande
         const NUM_OCEAN_PARTICLES = 400; // Un po' di più per la densità
         const SHOW_DEBUG_INFO = false;
-        let SHOW_SAIL_HINT = false; // Per l'indicatore della vela ottimale
+        let SHOW_SAIL_HINT = true; // Per l'indicatore della vela ottimale
 
         // --- VARIABILI GLOBALI ---
         let windsurf;
