--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ function updatePhysics() {
     // 1) Bolina stretta (assoluto < noGo) → nessuna propulsione, vela a 0
     if (absAngle > PI - noGoRadians) {
         powerFactor = 0;
-        board.sailAngle = 0;
+        board.sailAngle = (PI * 2);
 
     // 2) Poppa stretta (assoluto > π - noGo) → poca propulsione, vela a ±90°
     } else if (absAngle < noGoRadians) {
