--- a/index.html
+++ b/index.html
@@ -68,61 +68,60 @@
 
     function updatePhysics() {
     // 1) Vettore di direzione della prua (board.angle punta verso la prua)
-    const boardDirectionVector = p5.Vector.fromAngle(board.angle - PI / 2);
+    const boardDir = p5.Vector.fromAngle(board.angle - PI / 2);
 
-    // 2) Vettore del vento (già normalizzato in setup): windVector
-    // Calcoliamo l’angolo assoluto tra prua e vento [0 .. π]
-    const angleBetween = boardDirectionVector.angleBetween(windVector);
+    // 2) Vettore del vento: deve puntare VERSO la barca dalla direzione da cui soffia.
+    //    Assicuriamoci in setup di averlo creato così:
+    //      const windAngle = radians(WIND_DIRECTION_DEGREES) + PI;
+    //      windVector = p5.Vector.fromAngle(windAngle, 1);
+    //
+    // 3) Calcoliamo l’angolo tra VENTO → prua (windVector → boardDir), in [-π, +π]
+    const angleBetween = windVector.angleBetween(boardDir);
     const absAngle = abs(angleBetween);
 
-    // 3) Determiniamo da che lato arriva il vento con il prodotto vettoriale (cross Z)
-    //    cross > 0  → vento arriva da sinistra di boardDirectionVector
-    //    cross < 0  → vento arriva da destra
-    const cross = boardDirectionVector.x * windVector.y - boardDirectionVector.y * windVector.x;
-    const sign = (cross > 0) ? 1 : -1;
+    // 4) Cap di no‐go zone (in radianti)
+    const noGo = radians(NO_GO_ZONE_DEGREES);
 
-    // 4) No-Go zone in lettura di angoli stretti (< noGo) o stretti da poppa (> π - noGo)
-    const noGoRadians = radians(NO_GO_ZONE_DEGREES);
+    // 5) Determiniamo su che lato “arriva” il vento rispetto alla prua,
+    //    usando cross = (wind x board). Se cross > 0, prua è a sinistra del vento,
+    //    quindi il vento “colpisce” la barca da sinistra e la vela va a destra (+).
+    const cross = windVector.x * boardDir.y - windVector.y * boardDir.x;
+    const sideSign = (cross > 0) ? 1 : -1;
+
     let powerFactor = 0;
+    let target = 0;
 
-    // 4a) Bolina stretta: absAngle < noGoRadians → nessuna propulsione, vela a 180° (π)
-    if (absAngle < noGoRadians) {
+    // 6a) Bolina stretta: absAngle < noGo → nessuna propulsione, vela a 180° (piatta di fronte)
+    if (absAngle < noGo) {
         powerFactor = 0;
-        board.targetSailAngle = PI; 
+        target = PI;
 
-    // 4b) Poppa stretta: absAngle > π - noGoRadians → poca propulsione, vela a ±90° (π/2)
-    } else if (absAngle > PI - noGoRadians) {
+    // 6b) Poppa stretta: absAngle > π - noGo → poca propulsione, vela a ±90°
+    } else if (absAngle > PI - noGo) {
         powerFactor = 0.2;
-        board.targetSailAngle = sign * (PI / 2);
+        target = sideSign * (PI / 2);
 
-    // 4c) Bolina larga, traverso, lasco: potenza variabile, vela variabile
+    // 6c) Bolina larga, traverso, lasco: potenza variabile, vela variabile
     } else {
-        // 5) Propulsione proporzionale a sin(absAngle) (picco a traverso)
-        powerFactor = sin(absAngle);
-
-        // 6) Calcolo dinamico dell’angolo della vela (sailMag):
-        //    sailMag = π − 0.5 * absAngle
-        //      • absAngle = 0   → sailMag = π   (180°)
-        //      • absAngle = π/2 → sailMag = 3π/4 (135°)
-        //      • absAngle = π   → sailMag = π/2 ( 90°)
+        powerFactor = sin(absAngle);  
+        //  angolo scala fra 180° (absAngle=0) e 90° (absAngle=π):
+        //   sailMag = π − 0.5 * absAngle
         let sailMag = PI - 0.5 * absAngle;
-        board.targetSailAngle = sign * sailMag;
+        target = sideSign * sailMag;
     }
 
-    // 7) Interpoliamo per ottenere un movimento fluido della vela
-    board.sailAngle += (board.targetSailAngle - board.sailAngle) * board.sailLerp;
+    // 7) Interpolazione fluida della vela
+    board.sailAngle += (target - board.sailAngle) * board.sailLerp;
     board.debug_angleBetween = angleBetween;
     board.debug_powerFactor = powerFactor;
 
-    // 8) Applichiamo la forza propulsiva lungo la direzione della prua
-    const force = boardDirectionVector.copy().mult(powerFactor * WIND_SPEED);
+    // 8) Forza propulsiva lungo la prua
+    const force = boardDir.copy().mult(powerFactor * WIND_SPEED);
     board.vel.add(force);
-
-    // 9) Frizione e aggiornamento posizione
     board.vel.mult(board.drag);
     board.pos.add(board.vel);
 
-    // 10) Wrapping attorno ai bordi dello schermo
+    // 9) Wrapping ai bordi
     if (board.pos.x > width + 20)  board.pos.x = -20;
     if (board.pos.x < -20)         board.pos.x = width + 20;
     if (board.pos.y > height + 20) board.pos.y = -20;
