--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         noStroke();
         textAlign(CENTER, CENTER);
         text('N', 0, -28);
-        rotate(radians(WIND_DIRECTION_DEGREES));
+        rotate(-radians(WIND_DIRECTION_DEGREES));
         stroke(255, 0, 0);
         strokeWeight(3);
         line(0, -10, 0, 15);
